--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -928,8 +928,6 @@ input.gui-point-button-right:active {
   color: #efefef;
 }
 #snapshot-page #health-indicator {
-  width: 337px;
-  height: 310px;
   float: left;
   margin-right: 25px;
 }
@@ -942,8 +940,12 @@ input.gui-point-button-right:active {
   height: 309px;
 }
 @media screen and (max-width : 899px) {
-  #snapshot-page #health-indicator {
+  #snapshot-page #healthy-cluster #health-indicator {
     width: 279px;
+    height: 249px;
+  }
+  #snapshot-page #unhealthy-cluster #health-indicator {
+    width: 250px;
     height: 249px;
   }
   #snapshot-page #healthy-cluster section,
@@ -970,10 +972,13 @@ input.gui-point-button-right:active {
 #cluster-page #current-area,
 #cluster-page #planned-area {
   float: left;
-  width: 49%;
+  width: 48%;
 }
 #cluster-page #current-area {
-  margin: 0 2% 45px 0;
+  margin: 0 4% 45px 0;
+}
+#cluster-page span.gui-text-flat {
+  line-height: 1.5;
 }
 #cluster-page h3 {
   font-family: 'noticia', georgia, serif;
@@ -1042,8 +1047,12 @@ input.gui-point-button-right:active {
 #cluster-page .add-node-table tr td {
   padding-top: 25px;
 }
-#cluster-page #node-list {
+#cluster-page #node-list,
+#cluster-page #planned-list {
   margin-top: 20px;
+}
+#cluster-page .table-head td {
+  padding-bottom: 10px;
 }
 #cluster-page .more-node-actions {
   display: none;
@@ -1082,7 +1091,7 @@ input.gui-point-button-right:active {
   margin-top: 1px;
 }
 #cluster-page .name-box .field-container {
-  min-width: 75%;
+  min-width: 82%;
   margin-left: 4%;
 }
 #cluster-page #commit-button {
@@ -1107,6 +1116,13 @@ input.gui-point-button-right:active {
 }
 #cluster-page .staged .stage-button {
   background-position: center -78px;
+}
+#cluster-page .gui-light {
+  vertical-align: middle;
+  padding: 9px 0 9px 14px;
+}
+#cluster-page .stage-box {
+  width: 66px;
 }
 #cluster-page .pct-box {
   margin-top: 8px;
@@ -1334,14 +1350,34 @@ input.gui-point-button-right:active {
   display: block;
   width: 50%;
 }
+#cluster-page #planned-table {
+  margin-bottom: 30px;
+}
+#cluster-page #cluster-table,
+#cluster-page #planned-table {
+  margin-top: 30px;
+}
+#cluster-page .replacing-box .field-container {
+  width: 100%;
+}
+#cluster-page .accept-plan {
+  position: relative;
+  padding: 15px 0;
+  margin-top: 15px;
+}
+#cluster-page .plan-details-header {
+  padding: 10px 0;
+}
+#cluster-page .plan-details {
+  font-family: 'noticia', georgia, serif;
+  line-height: 1.5;
+}
+#cluster-page #commit-button {
+  position: absolute;
+  right: 0;
+  top: 12px;
+}
 @media screen and (min-width : 1300px) {
-  #cluster-page .gui-light {
-    vertical-align: middle;
-    padding: 9px 0 9px 14px;
-  }
-  #cluster-page .gui-light span {
-    display: none;
-  }
   #cluster-page .name-box .field-container {
     vertical-align: middle;
     padding-top: 5px;
@@ -1352,11 +1388,6 @@ input.gui-point-button-right:active {
   }
   #cluster-page .free-memory {
     display: none;
-  }
-}
-@media screen and (min-width : 1500px) {
-  #cluster-page .gui-light {
-    padding-left: 33px;
   }
 }
 @media screen and (max-width : 1300px) {
@@ -1376,7 +1407,7 @@ input.gui-point-button-right:active {
 }
 @media screen and (max-width : 1050px) {
   #cluster-page .name-box .field-container {
-    min-width: 68%;
+    min-width: 82%;
   }
 }
 @media screen and (max-width : 959px) {
@@ -1421,25 +1452,6 @@ input.gui-point-button-right:active {
   }
 }
 @media screen and (max-width : 890px) {
-  #cluster-page .gui-light {
-    vertical-align: middle;
-    padding: 9px 0 9px 14px;
-  }
-  #cluster-page #node-list .item2 {
-    width: 300px;
-  }
-  #cluster-page #node-list .item2 .field-container {
-    width: 75%;
-  }
-  #cluster-page #node-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item4 {
-    width: 150px;
-  }
-  #cluster-page #planned-list .item3 {
-    display: none;
-  }
   #cluster-page .name-box .field-container {
     vertical-align: middle;
     padding-top: 5px;
@@ -1483,6 +1495,17 @@ input.gui-point-button-right:active {
     width: 200px;
   }
   #cluster-page .gui-light {
+    display: none;
+  }
+  #cluster-page .gui-light {
+    display: none;
+  }
+}
+@media screen and (max-width : 550px) {
+  #cluster-page #cluster-table tr td:nth-child(4),
+  #cluster-page #planned-table tr td:nth-child(4),
+  #cluster-page #cluster-table tr td:nth-child(5),
+  #cluster-page #planned-table tr td:nth-child(5) {
     display: none;
   }
 }
