basic markup structure is there

--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -10,11 +10,13 @@ CSS to be applied ONLY on the cluster page
 
   #current-area, #planned-area
     float : left
-    width : 49%
+    width : 48%
 
   #current-area
-    margin : 0 2% 45px 0
+    margin : 0 4% 45px 0
  
+  span.gui-text-flat
+    line-height : 1.5
 
   h3
     copy-font()
@@ -26,8 +28,11 @@ CSS to be applied ONLY on the cluster page
   .add-node-table tr td
     padding-top : 25px
 
-  #node-list
+  #node-list, #planned-list
     margin-top : 20px
+
+  .table-head td
+    padding-bottom : 10px
     
   .more-node-actions
     display : none
@@ -58,7 +63,7 @@ CSS to be applied ONLY on the cluster page
 
 
   .name-box .field-container
-    min-width   : 75%
+    min-width   : 82%
     margin-left : 4%
 
     
@@ -79,6 +84,13 @@ CSS to be applied ONLY on the cluster page
 
   .staged .stage-button
     background-position : center -78px
+
+  .gui-light
+    vertical-align : middle
+    padding        : 9px 0 9px 14px
+
+  .stage-box
+    width : 66px
 
   .pct-box
     margin-top     : 8px
@@ -253,17 +265,36 @@ CSS to be applied ONLY on the cluster page
     float         : left
     margin-bottom : 5px
 
+
+  #planned-table
+    margin-bottom : 30px
+
+  #cluster-table, #planned-table 
+    margin-top : 30px
+
+  .replacing-box .field-container
+    width : 100%
+
+  .accept-plan
+    position   : relative
+    padding    : 15px 0
+    margin-top : 15px
+
+  .plan-details-header
+    padding : 10px 0
+
+  .plan-details
+    @extend .gui-text-flat
+    copy-font()
+    line-height : 1.5
+
+  #commit-button
+    absoluteRight(0, 12px)
+
   /* RESPONSIVE MEDIA QUERIES */
 
 
   @media screen and (min-width : 1300px)
-
-    .gui-light
-      vertical-align : middle
-      padding        : 9px 0 9px 14px
-
-    .gui-light span
-      display : none
 
     .name-box .field-container
       vertical-align : middle
@@ -275,10 +306,6 @@ CSS to be applied ONLY on the cluster page
     .free-memory
       display : none
 
-  @media screen and (min-width : 1500px)
-
-    .gui-light
-      padding-left : 33px
 
   @media screen and (max-width : 1300px)
 
@@ -297,7 +324,7 @@ CSS to be applied ONLY on the cluster page
   @media screen and (max-width : 1050px)
 
     .name-box .field-container
-      min-width : 68%;
+      min-width : 82%;
 
   @media screen and (max-width : 959px)
 
@@ -325,13 +352,6 @@ CSS to be applied ONLY on the cluster page
 
   @media screen and (max-width : 890px)
 
-    .gui-light
-      vertical-align : middle
-      padding        : 9px 0 9px 14px
-
-    .gui-light span
-      display : none
-
     .name-box .field-container
       vertical-align : middle
       padding-top    : 5px
@@ -346,6 +366,15 @@ CSS to be applied ONLY on the cluster page
 
     .replacement-controls
       margin-right : 0
+
+    .gui-light
+      display : none
+
+  @media screen and (max-width : 550px)
+
+    #cluster-table, #planned-table
+      tr td:nth-child(4), tr td:nth-child(5)
+        display : none
       
   @media screen and (max-width : 499px)
 
