new markup for ember on cluster page

--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -10,10 +10,23 @@ CSS to be applied ONLY on the cluster page
 
   #current-area, #planned-area
     float : left
-    width : 48%
+    width : 47%
 
   #current-area
-    margin : 0 4% 45px 0
+    margin : 0 0 45px 0
+
+
+  #area-separator
+    width      : 6%
+    height     : 450px
+    float      : left
+    text-align : center
+
+    div
+      margin     : 0 auto
+      width      : 1px
+      height     : 100%
+      background : lightWhite
  
   span.gui-text-flat
     line-height : 1.5
@@ -21,76 +34,128 @@ CSS to be applied ONLY on the cluster page
   h3
     copy-font()
 
+  .gui-light
+    vertical-align : middle
+    padding        : 9px 5px 9px 14px
+    margin-left    : -6px
+    margin-top     : -7px
+
+  .field-container
+    width : 75%
+
+  .gui-field
+    margin-right : 0
+    overflow     : hidden
+
   #add-node
     padding-top   : 40px
-    margin-bottom : 25px
+    margin-bottom : 45px
     
   .add-node-table tr td
     padding-top : 25px
 
+  .list-header
+    min-height : 18px
+
+    li
+      float : left
+      margin-bottom : 30px
+
+      h4
+        display : inline-block
+
   #node-list, #planned-list
     margin-top : 20px
 
-  .table-head td
-    padding-bottom : 10px
-    
-  .more-node-actions
-    display : none
-    vendor('box-shadow', 0 3px 5px darkened)
+  #node-list
+    .item1
+      width : 18%
+    .item2
+      width : 42%
+    .item3
+      width : 18%
+    .item4
+      width : 22%
 
-  .more-node-actions td
-    padding : 0 5px
+  .node > div
+    float : left
+
+  .node > div.clear
+    float : none
+
+  .toggle-container
+    overflow : visible
+    padding  : 0
+
+    .actions-toggle
+      dimensions(82px, 30px)
+      position   : relative
+      overflow   : visible
+      padding    : 0
+      background : url('/admin/ui/images/actions-toggle-text.png') -5px top no-repeat rgba(0, 0, 0, .3)
+      margin-top : 3px
+
+      a
+        dimensions(48px, 34px)
+        css-transition(left .2s ease)
+        position   : absolute
+        display    : inline-block
+        background : url('/admin/ui/images/actions-toggle-slider.png') left top no-repeat transparent
+        top        : 0
+        left       : -5px
+
+      a.open
+        css-transition(left .2s ease)
+        left : 38px
+
+  .name-box
+    overflow : visible
+
+  .ring-pct, .used-memory, .action-name
+    monospace();
+
+  .used-memory
+    display : inline-block
+    padding : 0 0 0 5px
+    vertical-align : middle
+
+  .action-name
+    display     : inline-block
+    padding-top : 8px
+
+  .replacing-box .field-container
+    width : 100%
+
+  #planned-list
+    .item1
+      width : 40%
+    .item2
+      width : 17%
+    .item3
+      width : 17%
+    .item4
+      width : 26%
+
+
+  .plan-details-header
+    margin-top : 30px
+    padding    : 10px 0
+  
+  .accept-plan
+    position   : relative
+    padding    : 15px 0
+    margin-top : 15px
+
+  .plan-details
+    @extend .gui-text-flat
+    copy-font()
+    line-height : 1.5
+
+  #commit-button
+    absoluteRight(0, 12px)
     
   .button-column
     text-align : right
-
-  .switch-box
-    dimensions(125px, auto)
-    vertical-align : top
-    
-    div
-      width        : 88px
-      padding-left : 4px
-    
-    &.on > div
-      vendor('box-shadow', inset 0 1px 3px darkened)
-      singleCorner(top, left, 4px)
-      singleCorner(top, right, 4px)
-      background     : darkened
-
-    .gui-switch-container
-      margin-top : 1px
-
-
-  .name-box .field-container
-    min-width   : 82%
-    margin-left : 4%
-
-    
-  .actions-header
-    padding-left : 6px
-
-  .stage-button
-    display    : block
-    background : url('/admin/ui/images/stagebutton-sprite.png') center 4px no-repeat transparent
-    width      : 58px
-    height     : 38px
-
-    &:hover
-      background-position : center -36px
-
-    &:active
-      background-position : center -78px
-
-  .staged .stage-button
-    background-position : center -78px
-
-  .gui-light
-    vertical-align : middle
-    padding        : 9px 0 9px 14px
-
-  .stage-box
-    width : 66px
 
   .pct-box
     margin-top     : 8px
@@ -146,8 +211,6 @@ CSS to be applied ONLY on the cluster page
       &:hover
         opaque(1)
         
-  .ring_pct-box
-    width : 150px
 
   .memory-box
     width : 175px
@@ -202,106 +265,204 @@ CSS to be applied ONLY on the cluster page
     background-color : #404040
     width            : 100%
 
-  .action-button
-    dimensions(45px, 45px)
-    gradient(#616161, #434343)
-    corners()
-    vendor('box-shadow', 0 2px 3px darkened)
-    display       : block
-    margin-bottom : 5px
-    
-    &:hover
-      gradient(lighten(#616161, 10%), #434343)
-      
-    &:active, &.pressed
-      gradient(#434343, #515151)
-
-  .disabled.action-button
-    gradient(#434343, #515151) !important
-
-  .action-icon
-    dimensions(45px, 45px)
-    vendor('box-shadow', inset 0 1px 2px lightWhite)
-    corners()
-    display    : block
-    background : url('/admin/ui/images/action-button-sprite.png') left top no-repeat transparent
+  .actions-pointer
+    dimensions(72px, 13px)
+    background : url('/admin/ui/images/pointer.png') center top no-repeat transparent
+    margin-top : 8px
     
   .actions-box
-    singleCorner(bottom, left, 10px)
-    singleCorner(bottom, right, 10px)
-    singleCorner(top, left, 4px)
+    corners()
+    width         : 92%
     background    : darkened
-    margin-top    : -6px
     margin-bottom : 15px
     border-bottom : 1px solid lightWhite
-    padding       : 15px
+    padding       : 18px
     margin-right  : 33px
-    display       : none
+    position      : relative
+
+    & > span
+      display       : block
+      border-bottom : 1px solid lightWhite
+      padding       : 0 0 10px
+
     
   .actions-box > div > span
     headline-bold()
     color        : lightGray
     padding-left : 3px
-    
-  .markdown-box, .shutdown-box, .leave-cluster-box
-    margin-bottom : 10px
-    margin-right  : 15px
-
-  .shutdown-button .action-icon
-    background-position : left bottom
-    
-  .markdown-button .action-icon
-    background-position : 1px 1px
-
-  .leave-cluster-button .action-icon
-    background-position : 1px -44px
    
   .replacement-controls
-    float : left
-    width : auto
+    width    : auto
+    margin-top : 18px
+
+    div
+      margin-bottom : 8px
+
+    select
+      margin-top : -38px
+      min-width  : 300px
    
   .replacement-node-dropdown
     width         : 100%
     float         : left
     margin-bottom : 5px
 
+  .stage-button
+    position : absolute
+    bottom   : 18px
+    right    : 18px
 
-  #planned-table
-    margin-bottom : 30px
 
-  #cluster-table, #planned-table 
-    margin-top : 30px
-
-  .replacing-box .field-container
-    width : 100%
-
-  .accept-plan
-    position   : relative
-    padding    : 15px 0
-    margin-top : 15px
-
-  .plan-details-header
-    padding : 10px 0
-
-  .plan-details
-    @extend .gui-text-flat
-    copy-font()
-    line-height : 1.5
-
-  #commit-button
-    absoluteRight(0, 12px)
 
   /* RESPONSIVE MEDIA QUERIES */
 
+  @media screen and (max-width : 1200px)
 
+    #area-separator
+      display : none
+
+    #current-area, #planned-area
+      width : 100%
+
+    #planned-area
+      padding-top : 30px
+      border-top  : 1px solid lightWhite
+
+    .actions-box
+      width : 96%
+
+    .field-container
+      width : 90%
+
+    #node-list
+      .item1
+        width : 100px
+      .item2
+        width : 500px
+      .item3
+        width : 100px
+      .item4
+        width : 150px
+
+    #planned-list
+      .item1
+        width : 300px
+      .item2
+        width       : 100px
+        margin-left : 25px
+      .item3
+        width : 100px
+      .item4
+        width : 350px
+
+  @media screen and (max-width : 950px)
+
+    #node-list
+      .item1
+        width : 100px
+      .item2
+        width : 400px
+      .item3
+        width : 100px
+      .item4
+        width : 150px
+
+    #planned-list
+      .item1
+        width : 275px
+      .item2
+        width : 100px
+      .item3
+        width : 100px
+      .item4
+        width : 225px
+
+  @media screen and (max-width : 850px)
+
+    #node-list
+      .item1
+        width : 100px
+      .item2
+        width : 300px
+        
+        .field-container
+          width : 75%
+
+      .item3
+        width : 100px
+      .item4
+        width : 150px
+
+    #planned-list
+      .item3
+        display : none
+
+    .used-memory
+      display : none
+
+  @media screen and (max-width : 700px)
+
+    #node-list
+      .item1
+        width : 100px
+      .item2
+        width : 200px
+        
+        .field-container
+          width : 75%
+
+      .item3
+        width : 100px
+      .item4
+        width : 150px
+
+    #planned-list
+      .item1
+        width : 200px
+      .item2
+        width       : 100px
+        margin-left : 0
+      .item4
+        width : 200px
+
+    .gui-light
+      display : none
+
+  @media screen and (max-width : 600px)
+
+    #node-list
+      .item1
+        display : none
+      .item2
+        width : 40%
+        .field-container
+          width : 95%
+      .item4
+        width : 100px
+
+    #planned-list
+      .item1
+        width : 40%
+        .field-container
+          width : 95%
+      .item2
+        width : 20%
+        margin-right : 2%
+      .item4
+        width : 38%
+        .field-container
+          width : 95%
+    
+    .actions-container
+      display : none
+
+
+  /*
   @media screen and (min-width : 1300px)
 
     .name-box .field-container
       vertical-align : middle
       padding-top    : 5px
-
-    .ring_pct-box, .memory-box
-      width : auto
 
     .free-memory
       display : none
@@ -356,9 +517,6 @@ CSS to be applied ONLY on the cluster page
       vertical-align : middle
       padding-top    : 5px
 
-    .ring_pct-box, .memory-box
-      width : auto
-
   @media screen and (max-width : 699px)
       
     .markdown-box, .shutdown-box, .leave-cluster-box
@@ -381,6 +539,7 @@ CSS to be applied ONLY on the cluster page
     .switch-box div
       padding: 0 7px 0 0
       margin : 0 0 0 5px
+  */
 
   /* END RESPONSIVE MEDIA QUERIES */
 
