--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -708,18 +708,18 @@ input.gui-point-button-right:active {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  background: rgba(0,0,0,0.3);
-  padding: 8px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.35);
+  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.35);
+  box-shadow: inset 0 1px 3px rgba(0,0,0,0.35);
+  background: rgba(0,0,0,0.35);
+  padding: 10px;
   border-bottom: 1px solid rgba(255,255,255,0.18);
   margin-right: 2em;
 }
 .gui-input {
   width: 100%;
   height: auto;
-  padding: 6px 8px;
+  padding: 8px;
   border-left: 0;
   border-right: 0;
   border-top: 0;
@@ -770,6 +770,9 @@ input.gui-point-button-right:active {
 .italic {
   font-family: 'noticia', georgia, serif;
   font-style: italic;
+}
+.serif {
+  font-family: 'noticia', georgia, serif;
 }
 .left {
   float: left;
@@ -911,10 +914,22 @@ input.gui-point-button-right:active {
 #cluster-page #current-area,
 #cluster-page #planned-area {
   float: left;
-  width: 48%;
+  width: 47%;
 }
 #cluster-page #current-area {
-  margin: 0 4% 45px 0;
+  margin: 0 0 45px 0;
+}
+#cluster-page #area-separator {
+  width: 6%;
+  height: 450px;
+  float: left;
+  text-align: center;
+}
+#cluster-page #area-separator div {
+  margin: 0 auto;
+  width: 1px;
+  height: 100%;
+  background: rgba(255,255,255,0.18);
 }
 #cluster-page span.gui-text-flat {
   line-height: 1.5;
@@ -922,84 +937,149 @@ input.gui-point-button-right:active {
 #cluster-page h3 {
   font-family: 'noticia', georgia, serif;
 }
+#cluster-page .gui-light {
+  vertical-align: middle;
+  padding: 9px 5px 9px 14px;
+  margin-left: -6px;
+  margin-top: -7px;
+}
+#cluster-page .field-container {
+  width: 75%;
+}
+#cluster-page .gui-field {
+  margin-right: 0;
+  overflow: hidden;
+}
 #cluster-page #add-node {
   padding-top: 40px;
-  margin-bottom: 25px;
+  margin-bottom: 45px;
 }
 #cluster-page .add-node-table tr td {
   padding-top: 25px;
+}
+#cluster-page .list-header {
+  min-height: 18px;
+}
+#cluster-page .list-header li {
+  float: left;
+  margin-bottom: 30px;
+}
+#cluster-page .list-header li h4 {
+  display: inline-block;
 }
 #cluster-page #node-list,
 #cluster-page #planned-list {
   margin-top: 20px;
 }
-#cluster-page .table-head td {
-  padding-bottom: 10px;
+#cluster-page #node-list .item1 {
+  width: 18%;
 }
-#cluster-page .more-node-actions {
-  display: none;
-  -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0 3px 5px rgba(0,0,0,0.3);
-  box-shadow: 0 3px 5px rgba(0,0,0,0.3);
+#cluster-page #node-list .item2 {
+  width: 42%;
 }
-#cluster-page .more-node-actions td {
-  padding: 0 5px;
+#cluster-page #node-list .item3 {
+  width: 18%;
+}
+#cluster-page #node-list .item4 {
+  width: 22%;
+}
+#cluster-page .node > div {
+  float: left;
+}
+#cluster-page .node > div.clear {
+  float: none;
+}
+#cluster-page .toggle-container {
+  overflow: visible;
+  padding: 0;
+}
+#cluster-page .toggle-container .actions-toggle {
+  width: 82px;
+  height: 30px;
+  position: relative;
+  overflow: visible;
+  padding: 0;
+  background: url("/admin/ui/images/actions-toggle-text.png") -5px top no-repeat rgba(0,0,0,0.3);
+  margin-top: 3px;
+}
+#cluster-page .toggle-container .actions-toggle a {
+  width: 48px;
+  height: 34px;
+  -webkit-transition: left 0.2s ease;
+  -moz-transition: left 0.2s ease;
+  -ms-transition: left 0.2s ease;
+  -webkit-transition: left 0.2s ease;
+  -moz-transition: left 0.2s ease;
+  -o-transition: left 0.2s ease;
+  transition: left 0.2s ease;
+  position: absolute;
+  display: inline-block;
+  background: url("/admin/ui/images/actions-toggle-slider.png") left top no-repeat transparent;
+  top: 0;
+  left: -5px;
+}
+#cluster-page .toggle-container .actions-toggle a.open {
+  -webkit-transition: left 0.2s ease;
+  -moz-transition: left 0.2s ease;
+  -ms-transition: left 0.2s ease;
+  -webkit-transition: left 0.2s ease;
+  -moz-transition: left 0.2s ease;
+  -o-transition: left 0.2s ease;
+  transition: left 0.2s ease;
+  left: 38px;
+}
+#cluster-page .name-box {
+  overflow: visible;
+}
+#cluster-page .ring-pct,
+#cluster-page .used-memory,
+#cluster-page .action-name {
+  font-family: 'menlo', 'consolas', 'monaco', monospace;
+}
+#cluster-page .used-memory {
+  display: inline-block;
+  padding: 0 0 0 5px;
+  vertical-align: middle;
+}
+#cluster-page .action-name {
+  display: inline-block;
+  padding-top: 8px;
+}
+#cluster-page .replacing-box .field-container {
+  width: 100%;
+}
+#cluster-page #planned-list .item1 {
+  width: 40%;
+}
+#cluster-page #planned-list .item2 {
+  width: 17%;
+}
+#cluster-page #planned-list .item3 {
+  width: 17%;
+}
+#cluster-page #planned-list .item4 {
+  width: 26%;
+}
+#cluster-page .plan-details-header {
+  margin-top: 30px;
+  padding: 10px 0;
+}
+#cluster-page .accept-plan {
+  position: relative;
+  padding: 15px 0;
+  margin-top: 15px;
+}
+#cluster-page .plan-details {
+  font-family: 'noticia', georgia, serif;
+  line-height: 1.5;
+}
+#cluster-page #commit-button {
+  position: absolute;
+  right: 0;
+  top: 12px;
 }
 #cluster-page .button-column {
   text-align: right;
-}
-#cluster-page .switch-box {
-  width: 125px;
-  height: auto;
-  vertical-align: top;
-}
-#cluster-page .switch-box div {
-  width: 88px;
-  padding-left: 4px;
-}
-#cluster-page .switch-box.on > div {
-  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-radius-topleft: 4px;
-  border-top-left-radius: 4px;
-  -webkit-border-top-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  border-top-right-radius: 4px;
-  background: rgba(0,0,0,0.3);
-}
-#cluster-page .switch-box .gui-switch-container {
-  margin-top: 1px;
-}
-#cluster-page .name-box .field-container {
-  min-width: 82%;
-  margin-left: 4%;
-}
-#cluster-page .actions-header {
-  padding-left: 6px;
-}
-#cluster-page .stage-button {
-  display: block;
-  background: url("/admin/ui/images/stagebutton-sprite.png") center 4px no-repeat transparent;
-  width: 58px;
-  height: 38px;
-}
-#cluster-page .stage-button:hover {
-  background-position: center -36px;
-}
-#cluster-page .stage-button:active {
-  background-position: center -78px;
-}
-#cluster-page .staged .stage-button {
-  background-position: center -78px;
-}
-#cluster-page .gui-light {
-  vertical-align: middle;
-  padding: 9px 0 9px 14px;
-}
-#cluster-page .stage-box {
-  width: 66px;
 }
 #cluster-page .pct-box {
   margin-top: 8px;
@@ -1032,9 +1112,9 @@ input.gui-point-button-right:active {
 }
 #cluster-page #node-error {
   font-family: 'titillium', helvetica, arial, sans-serif;
-  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
+  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.35);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.35);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -1064,9 +1144,6 @@ input.gui-point-button-right:active {
 #cluster-page #node-error .close-error:hover {
   opacity: 1;
   filter: alpha(opacity=100);
-}
-#cluster-page .ring_pct-box {
-  width: 150px;
 }
 #cluster-page .memory-box {
   width: 175px;
@@ -1142,82 +1219,28 @@ input.gui-point-button-right:active {
   background-color: #404040;
   width: 100%;
 }
-#cluster-page .action-button {
-  width: 45px;
-  height: 45px;
-  background: #434343;
-  background: -moz-linear-gradient(top, #616161 0%, #434343 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #616161), color-stop(100%, #434343));
-  background: -webkit-linear-gradient(top, #616161 0%, #434343 100%);
-  background: -o-linear-gradient(top, #616161 0%, #434343 100%);
-  background: -ms-linear-gradient(top, #616161 0%, #434343 100%);
-  background: linear-gradient(top bottom, #616161 0%, #434343 100%);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-  display: block;
-  margin-bottom: 5px;
-}
-#cluster-page .action-button:hover {
-  background: #434343;
-  background: -moz-linear-gradient(top, #717171 0%, #434343 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #717171), color-stop(100%, #434343));
-  background: -webkit-linear-gradient(top, #717171 0%, #434343 100%);
-  background: -o-linear-gradient(top, #717171 0%, #434343 100%);
-  background: -ms-linear-gradient(top, #717171 0%, #434343 100%);
-  background: linear-gradient(top bottom, #717171 0%, #434343 100%);
-}
-#cluster-page .action-button:active,
-#cluster-page .action-button.pressed {
-  background: #515151;
-  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
-  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
-  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
-}
-#cluster-page .disabled.action-button {
-  background: #515151;
-  background: -moz-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #434343), color-stop(100%, #515151));
-  background: -webkit-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -o-linear-gradient(top, #434343 0%, #515151 100%);
-  background: -ms-linear-gradient(top, #434343 0%, #515151 100%);
-  background: linear-gradient(top bottom, #434343 0%, #515151 100%);
-}
-#cluster-page .action-icon {
-  width: 45px;
-  height: 45px;
-  -webkit-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
-  -moz-box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
-  box-shadow: inset 0 1px 2px rgba(255,255,255,0.18);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  display: block;
-  background: url("/admin/ui/images/action-button-sprite.png") left top no-repeat transparent;
+#cluster-page .actions-pointer {
+  width: 72px;
+  height: 13px;
+  background: url("/admin/ui/images/pointer.png") center top no-repeat transparent;
+  margin-top: 8px;
 }
 #cluster-page .actions-box {
-  -webkit-border-bottom-left-radius: 10px;
-  -moz-border-radius-bottomleft: 10px;
-  border-bottom-left-radius: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  -moz-border-radius-bottomright: 10px;
-  border-bottom-right-radius: 10px;
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-radius-topleft: 4px;
-  border-top-left-radius: 4px;
-  background: rgba(0,0,0,0.3);
-  margin-top: -6px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  width: 92%;
+  background: rgba(0,0,0,0.35);
   margin-bottom: 15px;
   border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 15px;
+  padding: 18px;
   margin-right: 33px;
-  display: none;
+  position: relative;
+}
+#cluster-page .actions-box > span {
+  display: block;
+  border-bottom: 1px solid rgba(255,255,255,0.18);
+  padding: 0 0 10px;
 }
 #cluster-page .actions-box > div > span {
   font-family: 'titillium', helvetica, arial, sans-serif;
@@ -1225,149 +1248,181 @@ input.gui-point-button-right:active {
   color: #efefef;
   padding-left: 3px;
 }
-#cluster-page .markdown-box,
-#cluster-page .shutdown-box,
-#cluster-page .leave-cluster-box {
-  margin-bottom: 10px;
-  margin-right: 15px;
-}
-#cluster-page .shutdown-button .action-icon {
-  background-position: left bottom;
-}
-#cluster-page .markdown-button .action-icon {
-  background-position: 1px 1px;
-}
-#cluster-page .leave-cluster-button .action-icon {
-  background-position: 1px -44px;
-}
 #cluster-page .replacement-controls {
-  float: left;
   width: auto;
+  margin-top: 18px;
+}
+#cluster-page .replacement-controls div {
+  margin-bottom: 8px;
+}
+#cluster-page .replacement-controls select {
+  margin-top: -38px;
+  min-width: 300px;
 }
 #cluster-page .replacement-node-dropdown {
   width: 100%;
   float: left;
   margin-bottom: 5px;
 }
-#cluster-page #planned-table {
-  margin-bottom: 30px;
-}
-#cluster-page #cluster-table,
-#cluster-page #planned-table {
-  margin-top: 30px;
-}
-#cluster-page .replacing-box .field-container {
-  width: 100%;
-}
-#cluster-page .accept-plan {
-  position: relative;
-  padding: 15px 0;
-  margin-top: 15px;
-}
-#cluster-page .plan-details-header {
-  padding: 10px 0;
-}
-#cluster-page .plan-details {
-  font-family: 'noticia', georgia, serif;
-  line-height: 1.5;
-}
-#cluster-page #commit-button {
+#cluster-page .stage-button {
   position: absolute;
-  right: 0;
-  top: 12px;
+  bottom: 18px;
+  right: 18px;
 }
-@media screen and (min-width : 1300px) {
-  #cluster-page .name-box .field-container {
-    vertical-align: middle;
-    padding-top: 5px;
-  }
-  #cluster-page .ring_pct-box,
-  #cluster-page .memory-box {
-    width: auto;
-  }
-  #cluster-page .free-memory {
+@media screen and (max-width : 1200px) {
+  #cluster-page #area-separator {
     display: none;
   }
-}
-@media screen and (max-width : 1300px) {
   #cluster-page #current-area,
   #cluster-page #planned-area {
-    float: none;
-    width: auto;
+    width: 100%;
   }
-  #cluster-page #current-area {
-    margin-right: 0;
-  }
-}
-@media screen and (min-width : 1100px) {
-  #cluster-page .replacement-controls {
-    width: 250px;
-  }
-}
-@media screen and (max-width : 1050px) {
-  #cluster-page .name-box .field-container {
-    min-width: 82%;
-  }
-}
-@media screen and (max-width : 959px) {
-  #cluster-page .free-memory {
-    display: none;
+  #cluster-page #planned-area {
+    padding-top: 30px;
+    border-top: 1px solid rgba(255,255,255,0.18);
   }
   #cluster-page .actions-box {
-    margin-right: 0;
+    width: 96%;
   }
-  #cluster-page .switch-box {
+  #cluster-page .field-container {
+    width: 90%;
+  }
+  #cluster-page #node-list .item1 {
     width: 100px;
   }
-  #cluster-page .switch-box div {
-    width: 78px;
-    padding-left: 0;
+  #cluster-page #node-list .item2 {
+    width: 500px;
   }
-  #cluster-page .switch-box > div {
-    width: auto;
-    padding: 0;
-    text-align: center;
+  #cluster-page #node-list .item3 {
+    width: 100px;
   }
-  #cluster-page .actions-header {
-    padding-left: 0;
-    text-align: center;
+  #cluster-page #node-list .item4 {
+    width: 150px;
+  }
+  #cluster-page #planned-list .item1 {
+    width: 300px;
+  }
+  #cluster-page #planned-list .item2 {
+    width: 100px;
+    margin-left: 25px;
+  }
+  #cluster-page #planned-list .item3 {
+    width: 100px;
+  }
+  #cluster-page #planned-list .item4 {
+    width: 350px;
   }
 }
-@media screen and (max-width : 890px) {
-  #cluster-page .name-box .field-container {
-    vertical-align: middle;
-    padding-top: 5px;
+@media screen and (max-width : 950px) {
+  #cluster-page #node-list .item1 {
+    width: 100px;
   }
-  #cluster-page .ring_pct-box,
-  #cluster-page .memory-box {
-    width: auto;
+  #cluster-page #node-list .item2 {
+    width: 400px;
+  }
+  #cluster-page #node-list .item3 {
+    width: 100px;
+  }
+  #cluster-page #node-list .item4 {
+    width: 150px;
+  }
+  #cluster-page #planned-list .item1 {
+    width: 275px;
+  }
+  #cluster-page #planned-list .item2 {
+    width: 100px;
+  }
+  #cluster-page #planned-list .item3 {
+    width: 100px;
+  }
+  #cluster-page #planned-list .item4 {
+    width: 225px;
   }
 }
-@media screen and (max-width : 699px) {
-  #cluster-page .markdown-box,
-  #cluster-page .shutdown-box,
-  #cluster-page .leave-cluster-box {
-    margin-right: 10px;
+@media screen and (max-width : 850px) {
+  #cluster-page #node-list .item1 {
+    width: 100px;
   }
-  #cluster-page .replacement-controls {
-    margin-right: 0;
+  #cluster-page #node-list .item2 {
+    width: 300px;
+  }
+  #cluster-page #node-list .item2 .field-container {
+    width: 75%;
+  }
+  #cluster-page #node-list .item3 {
+    width: 100px;
+  }
+  #cluster-page #node-list .item4 {
+    width: 150px;
+  }
+  #cluster-page #planned-list .item3 {
+    display: none;
+  }
+  #cluster-page .used-memory {
+    display: none;
+  }
+}
+@media screen and (max-width : 700px) {
+  #cluster-page #node-list .item1 {
+    width: 100px;
+  }
+  #cluster-page #node-list .item2 {
+    width: 200px;
+  }
+  #cluster-page #node-list .item2 .field-container {
+    width: 75%;
+  }
+  #cluster-page #node-list .item3 {
+    width: 100px;
+  }
+  #cluster-page #node-list .item4 {
+    width: 150px;
+  }
+  #cluster-page #planned-list .item1 {
+    width: 200px;
+  }
+  #cluster-page #planned-list .item2 {
+    width: 100px;
+    margin-left: 0;
+  }
+  #cluster-page #planned-list .item4 {
+    width: 200px;
   }
   #cluster-page .gui-light {
     display: none;
   }
 }
-@media screen and (max-width : 550px) {
-  #cluster-page #cluster-table tr td:nth-child(4),
-  #cluster-page #planned-table tr td:nth-child(4),
-  #cluster-page #cluster-table tr td:nth-child(5),
-  #cluster-page #planned-table tr td:nth-child(5) {
+@media screen and (max-width : 600px) {
+  #cluster-page #node-list .item1 {
     display: none;
   }
-}
-@media screen and (max-width : 499px) {
-  #cluster-page .switch-box div {
-    padding: 0 7px 0 0;
-    margin: 0 0 0 5px;
+  #cluster-page #node-list .item2 {
+    width: 40%;
+  }
+  #cluster-page #node-list .item2 .field-container {
+    width: 95%;
+  }
+  #cluster-page #node-list .item4 {
+    width: 100px;
+  }
+  #cluster-page #planned-list .item1 {
+    width: 40%;
+  }
+  #cluster-page #planned-list .item1 .field-container {
+    width: 95%;
+  }
+  #cluster-page #planned-list .item2 {
+    width: 20%;
+    margin-right: 2%;
+  }
+  #cluster-page #planned-list .item4 {
+    width: 38%;
+  }
+  #cluster-page #planned-list .item4 .field-container {
+    width: 95%;
+  }
+  #cluster-page .actions-container {
+    display: none;
   }
 }
 #ring-page #ring-filter {
